--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
             
         </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+        <div>
+            <div" id="dp"><span class="Flower">Flower</span><span class="Shop">Shop</span></div>
+        <p id="id-class">It is a long established fact that a reader  will be distracted by the readable <br> content of a page when looking at its layout.</p>
+        </div>
+    </footer>
 </body>
 </html>
