--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="d-title">
             <h1>Let's make beautiful flowers a part of your life.</h1>
-            <p>It is a long established fact that a reader  will be distracted by the readable <br>content of a page when looking at its  The point of using <br> Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+            <p>It is a long established fact that a reader  will be distracted by the readable <br>content of a page when Looking at its  The point of using <br> Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
             <button class="btn-primary">Shop Now</button>
         </div>
         <div>
