added  six commit

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
         <div>
             <div" id="dp"><span class="Flower">Flower</span><span class="Shop">Shop</span></div>
         <p id="id-class">It is a long established fact that a reader  will be distracted by the readable <br> content of a page when looking at its layout.</p>
+        <small class="copy-class">
+            <p>
+                &copy;@2020-2023, FlowerShop.com. All rights reserved. 
+            </p>
+         <small>   
         </div>
     </footer>
 </body>
