--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Flower Shop</title>
+    <link rel = "icon" href = "style/Flower Asset/7133312.png" 
+        type = "img">
+          
     <link rel="stylesheet" href="style/flowers.css">
 </head>
 <body>
@@ -86,7 +89,10 @@
             <p>
                 &copy;@2020-2023, FlowerShop.com. All rights reserved. 
             </p>
-         <small>   
+         <small>  
+            <img src="style/Flower Asset/icons/facebook.png" alt=""> 
+            <img src="style/Flower Asset/icons/twitter.png" alt=""> 
+            <img src="style/Flower Asset/icons/insta.png" alt=""> 
         </div>
     </footer>
 </body>
